fix(dto): null-safe Sorting.of + clarify Pagination.unpaged semantics
- Sorting: явная проверка на null-токены с понятным сообщением
  ("sortBy must not contain null tokens") вместо безымянного NPE из List.copyOf.
  Sorting.of(null) теперь возвращает unsorted(), а не падает.
- Pagination.unpaged(): javadoc честно объясняет, что это limit=MAX_VALUE
  (генерит LIMIT 2147483647), а НЕ настоящий unpaged. Для реального стриминга
  рекомендован Pageable.unpaged() от Spring Data.
- Тесты: +3 (null-token rejection в of и конструкторе, of(null array) → unsorted).

Tests: 86 → 89 passing.