@@ -11,16 +11,33 @@ public record Sorting(List<String> sortBy) {
     public Sorting {
         // Defensive copy: гарантирует immutability даже если caller передал mutable ArrayList
         // (типичный случай при Jackson-десериализации) или потом мутирует исходник.
-        sortBy = sortBy == null ? List.of() : List.copyOf(sortBy);
+        // null-элементы отбрасываются с понятным сообщением (иначе List.copyOf бросил бы безымянный NPE).
+        if (sortBy == null) {
+            sortBy = List.of();
+        } else {
+            for (String token : sortBy) {
+                if (token == null) {
+                    throw new IllegalArgumentException("sortBy must not contain null tokens");
+                }
+            }
+            sortBy = List.copyOf(sortBy);
+        }
     }
 
     public static Sorting unsorted() {
         return new Sorting(List.of());
     }
 
-    /** Удобный конструктор: {@code Sorting.of("desc(createdAt)", "asc(id)")}. */
+    /**
+     * Удобный конструктор: {@code Sorting.of("desc(createdAt)", "asc(id)")}.
+     *
+     * @throws IllegalArgumentException если среди tokens есть {@code null}
+     */
     public static Sorting of(String... tokens) {
-        return new Sorting(List.of(tokens));
+        if (tokens == null) {
+            return unsorted();
+        }
+        return new Sorting(java.util.Arrays.asList(tokens));  // через конструктор → null-проверка + copy
     }
 
     public boolean isEmpty() {
